@@ -63,7 +63,7 @@ Build-Depends: aspell,
                python-numpy,
                quilt,
                rsync,
-               t1utils,
+               t1utils (>= 1.38-3~),
                unzip,
                xz-utils,
                zip
@@ -99,7 +99,7 @@ Depends: binutils,
          man-db,
          patchutils,
          perl,
-         t1utils,
+         t1utils (>= 1.38-3~),
          ${misc:Depends}
 Recommends: dpkg (>= 1.17.14),
             perl (>= 5.20) | libautodie-perl (>= 2.18),
